tests/NormalTests/paczka1/fuzzy1/68029450.err
Error in line 4: wP29gCgiWs9 S615 78,4
Error in line 11: lOuM8PS A388 28,8
Error in line 29: 0ue7spUYF A816 50,3
Error in line 31: 0ue7spUYF S653 82,5
